# scotch

./: .bldr  .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  Makefile.grammar  README.md  dub.json  vcpkg.json
cmake/: Boost.cmake  Cache.cmake  CompileCommands.cmake  CompilerWarnings.cmake  Conan.cmake  Doxygen.cmake  ModCompileCommands.cmake.in  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  color.cmake  compile_commands.cmake  compiler_warnings.cmake  doxygen.cmake  iwyu.cmake  sanitizers.cmake  setup_pkg.cmake  targets.cmake
cmake_config/: CMakeLists.txt  a.out  config.hpp.in
docs/: CONTRIBUTING.md  DEPENDENCIES.md  INSTALL.md  ORGANISATOIN.md
docs/css/: custom.css
docs/features/: README.md  best_practice.md  glossary.md
docs/features/control_flow/: README.md
docs/features/error_handling/: README.md
docs/features/fields_methods_calls/: README.md
docs/features/fmt/: README.md
docs/features/functions/: README.md
docs/features/js/: README.md
docs/features/keywords/: README.md
docs/features/memory/: README.md
docs/features/modules/: README.md
docs/features/notes/: README.md
docs/features/stdlib/: README.md
docs/features/types/: README.md
docs/features/variables/: README.md
docs/generation/: README.md
grammar/: .gitignore  dub.json
grammargen/: .gitignore  dub.json
grammargen/source/: app.d
grammargen/views/: scot.pegd
source/: app.d  args.d  ast.d  cli.d  errors.d  frontend.d  logger.d
source/backend/: js.d  package.d
source/frontend/: package.d
source/frontend/utils/: asserts.d  conv.d  get.d  package.d
source/utils/: package.d  set.d  stack.d
src/: CMakeLists.txt  args.cpp  args.hpp  ast.cpp  ast.hpp  ast_compiler.cpp  ast_compiler.hpp  ast_fwd.hpp  common.cpp  common.hpp  comp.hpp  compiler.cpp  compiler.hpp  console_error.cpp  console_error.hpp  console_io.cpp  console_io.hpp  console_out.cpp  console_out.hpp  conv.hpp  empty_post_proc.hpp  empty_pre_proc.hpp  error.cpp  error.hpp  error_handler.hpp  file.cpp  file.hpp  fwd.hpp  hash.hpp  io.cpp  io.hpp  lex.hpp  macros.hpp  main.cpp  output.hpp  parse.hpp  parser_interface.cpp  parser_interface.hpp  parser_options.cpp  parser_options.hpp  (+21 more)
src/ast/: binexpr.cpp  binexpr.hpp  block.cpp  block.hpp  call.hpp  entry.cpp  entry.hpp  expression.hpp  expressionstatement.hpp  functiondecl.cpp  functiondecl.hpp  literal.cpp  literal.hpp  module.cpp  module.hpp  node.hpp  printer.cpp  program.cpp  program.hpp  return.cpp  return.hpp  scope.hpp  value.cpp  value.hpp  valuetype.hpp  variableaccess.cpp  variableaccess.hpp  variabledecl.cpp  variabledecl.hpp
src/compiler/: compiler.cpp  compiler.hpp
src/lexer/: builtins.cpp  builtins.hpp  lexer.cpp  lexer.hpp  operators.hpp  token.cpp  token.hpp  token_type.cpp  token_type.hpp
src/parser/: parser.cpp  parser.hpp
src/tools/: args.cpp  args.hpp  class_tools.hpp  common.hpp  file.cpp  file.hpp  ftrace.cpp  ftrace.hpp  hash.hpp  log.hpp  scalloca.hpp  source_location_fix.hpp  switch_tools.hpp  types.hpp  warncahce.cpp  warncahce.hpp
test/: CMakeLists.txt  goal.scot  grammar_test.scot  shortterm_goal.scot  shortterm_goal_expected_output.wat  test.scot  test.wat  test_1.scot  test_1_expected_output.wat  test_2.scot  test_2_expected_output.wat  test_driver.cpp  test_io.cpp  test_io.hpp  tests.cpp
test/declaration_tests/: const_declaration.parse.error  const_f32_declaration.scot  const_f64_declaration.scot  const_f64_suffix_declaration.scot  const_i32_declaration.scot  const_i64_declaration.scot  const_i64_suffix_declaration.scot  inferred_const_declaration.parse.error  inferred_const_f32_declaration.scot  inferred_const_f64_declaration.scot  inferred_const_f64_suffix_declaration.scot  inferred_const_i32_declaration.scot  inferred_const_i64_declaration.scot  inferred_const_i64_suffix_declaration.scot  inferred_let_declaration.parse.error  inferred_let_f32_declaration.scot  inferred_let_f64_declaration.scot  inferred_let_f64_suffix_declaration.scot  inferred_let_i32_declaration.scot  inferred_let_i64_declaration.scot  inferred_let_i64_suffix_declaration.scot  let_declaration.parse.error  let_f32_declaration.scot  let_f64_declaration.scot  let_f64_suffix_declaration.scot  let_i32_declaration.scot  let_i64_declaration.scot  let_i64_suffix_declaration.scot  multiple_declarations.scot  multiple_declarations_const_const_different_type_error.scot  multiple_declarations_const_const_same_type.compile.error  multiple_declarations_const_let_different_type.compile.error  multiple_declarations_const_let_same_type.compile.error  multiple_declarations_let_let_different_type.compile.error  multiple_declarations_let_let_same_type.compile.error
test/function_tests/: multiple_declarations.compile.error  multiple_declarations.scot  return_f32.scot  return_f64.scot  return_i32.scot  return_i64.scot  return_void.scot
test/if_tests/: basic_if.scot
test/parameter_tests/: assign_to_const.scot  assign_to_let.scot  multiple_parameters.scot  reassign_error.scot  redeclare_error.scot  return_parameter.scot  single_parameter.scot
test/type_tests/: return_wrong_float_variable_let_error.scot  return_wrong_type_variable_let_error.scot
test/type_tests.scot/: return_wrong_float_literal_error.scot  return_wrong_float_variable_const_error.scot  return_wrong_integer_literal_error.scot  return_wrong_integer_variable_const_error.scot  return_wrong_integer_variable_let_error.scot  return_wrong_type_literal_error.scot  return_wrong_type_variable_const_error.scot
wasmrunner/: package.json  wasmrunner.js
